--- a/app/package.json
+++ b/app/package.json
@@ -12,13 +12,17 @@
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-tailwindcss": "^1.0.3",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.7",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "16.12",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "tailwindcss": "^1.1.4",
+    "tailwindcss-transforms": "^2.2.0",
+    "tailwindcss-transitions": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
