--- a/app/package.json
+++ b/app/package.json
@@ -30,11 +30,17 @@
     "@babel/plugin-transform-react-jsx": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "@storybook/addon-a11y": "^5.2.8",
+    "@storybook/addon-knobs": "^5.3.7",
     "@storybook/react": "^5.2.8",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.0.1",
-    "prettier": "^1.19.1"
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3"
   },
   "keywords": [
     "gatsby"
