--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Bryce Sayers-Kwan <bryce.sayers-kwan@live.ca>",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "gatsby": "^2.18.7",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.31",
