--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "author": "Bryce Sayers-Kwan <bryce.sayers-kwan@live.ca>",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@n8tb1t/use-scroll-position": "^1.0.43",
     "gatsby": "^2.18.7",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.31",
