--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "react": "16.12",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-modal": "^3.11.1",
     "tailwindcss": "^1.1.4",
     "tailwindcss-transforms": "^2.2.0",
     "tailwindcss-transitions": "^2.1.0"
