--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-modal": "^3.11.1",
+    "react-svg": "^11.0.7",
     "tailwindcss": "^1.1.4",
     "tailwindcss-transforms": "^2.2.0",
     "tailwindcss-transitions": "^2.1.0"
