--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "16.12",
+    "react-app-polyfill": "^1.0.5",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-modal": "^3.11.1",
