--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-tailwindcss": "^1.0.3",
